# HMM3-at-home

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  check_for_libs.sh  info.txt  install.sh
resource/: map1.hmm3map
resources/: map1.hmm3map
src/: AiPlayer.cc  AiPlayer.h  AlivePlayer.cc  AlivePlayer.h  Battle.cc  Battle.h  BattleButton.cc  BattleButton.h  BattlePanel.cc  BattlePanel.h  Button.cc  Button.h  BuyUnitButton.cc  BuyUnitButton.h  Command.cc  Command.h  DifficultyButton.cc  DifficultyButton.h  Field.cc  Field.h  GameData.cc  GameData.h  GameDefaults.h  GameEntity.cc  GameEntity.h  GameMap.cc  GameMap.h  GameMapVisitator.h  GameWindow.cc  GameWindow.h  Hero.cc  Hero.h  HeroExtrinsic.cc  HeroExtrinsic.h  HeroIntrinsic.cc  HeroIntrinsic.h  HeroResources.cc  HeroResources.h  Image.cc  Image.h  (+42 more)
src/engine_core/: BoxEntity.cc  BoxEntity.h  Engine.cc  Engine.h  EntityRegistry.cc  EntityRegistry.h  GameEntity.cc  GameEntity.h  GridEntity.cc  GridEntity.h  Renderer.cc  Renderer.h  SdlFacade.cc  SdlFacade.h  Sprite.cc  Sprite.h  Window.cc  Window.h
src/engine_core/components/: BoxComponent.cc  BoxComponent.h  EmptyComponent.cc  EmptyComponent.h  GraphicsComponent.h  GridComponent.cc  GridComponent.h  PositionComponent.cc  PositionComponent.h  SpriteComponent.cc  SpriteComponent.h  StateComponent.cc  StateComponent.h
test/: TestBattle.cc  TestEntityRegistry.cc  TestGameMap.cc  TestHero.cc  TestHeroResources.cc  TestMapObject.cc  TestMapParser.cc  TestShortestPathFinder.cc  TestTurnManager.cc  doctest.h  main.cc
